Fix: post it overlapped controls

--- a/client/templates/menu/menu.scss
+++ b/client/templates/menu/menu.scss
@@ -202,6 +202,7 @@
     top: 0;
     overflow: hidden;
     transition: 3s;
+    z-index: 0;
 }
 
 .log-in .menu {
